test: e2e new api widnow specs full coverage
